--- a/Music.css
+++ b/Music.css
@@ -3,7 +3,7 @@
   padding: 0%;
   box-sizing: border-box;
   font-size: 62.5%;
-  font-family: "Courier New";
+  font-family: "cursive";
 }
 
 .main_div {
