--- a/Music.css
+++ b/Music.css
@@ -1,9 +1,9 @@
 * {
   margin: 0;
-  padding: 0%;
+  padding: 0;
   box-sizing: border-box;
   font-size: 62.5%;
-  font-family: "cursive";
+  font-family: cursive;
 }
 
 .main_div {
@@ -114,14 +114,10 @@ img {
   animation: rotatePlayer 3s linear 3s;
 }
 
-/* Music.css */
-
-/* Styles for the progress slider */
 .progress_slider {
   width: 100%;
   height: 10px;
-  -webkit-appearance: none;
-  background: linear-gradient(to right, #4CAF50 0%, #4CAF50 0%, #ddd 0%, #ddd 100%);
+  background: linear-gradient(to right, #4caf50 0%, #4caf50 0%, #ddd 0%, #ddd 100%);
   border-radius: 5px;
   outline: none;
   margin-top: 3rem;
@@ -129,11 +125,9 @@ img {
 }
 
 .progress_slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
   width: 15px;
   height: 15px;
-  background: #4CAF50;
+  background: #4caf50;
   cursor: pointer;
   border-radius: 50%;
 }
@@ -141,26 +135,19 @@ img {
 .progress_slider::-moz-range-thumb {
   width: 15px;
   height: 15px;
-  background: #4CAF50;
+  background: #4caf50;
   cursor: pointer;
   border-radius: 50%;
 }
 
-/* -------------Volume---------------- */
 .volume_slider {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
   height: 5px;
   background: #83a9ff;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
 }
 
 .volume_slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
   width: 15px;
   height: 15px;
   background: white;
@@ -169,13 +156,13 @@ img {
   border-radius: 100%;
 }
 
-.volume_slider:hover {
-  opacity: 1.0;
-}
-
 .volume_slider {
   margin-top: 20px;
   width: 60%;
+}
+
+.volume_slider:hover {
+  opacity: 1;
 }
 
 .fa {
@@ -194,22 +181,22 @@ img {
   }
 }
 
-@keyframes animate{
-  0%{
+@keyframes animate {
+  0% {
     transform: rotate(0deg);
   }
-  100%{
+  100% {
     transform: rotate(360deg);
   }
 }
 
-.music{
+.music {
   position: absolute;
   top: 0;
   inset: 0;
 }
 
-.music::before{
+.music::before {
   content: "";
   position: absolute;
   width: 40rem;
@@ -223,7 +210,7 @@ img {
   animation-delay: -1.5s;
 }
 
-.music::after{
+.music::after {
   content: "";
   position: absolute;
   width: 40rem;
@@ -237,7 +224,7 @@ img {
   animation-delay: -4.5s;
 }
 
-.container::before{
+.container::before {
   content: "";
   position: absolute;
   width: 40rem;
@@ -250,7 +237,7 @@ img {
   animation: animate 6s linear infinite;
 }
 
-.container::after{
+.container::after {
   content: "";
   position: absolute;
   width: 40rem;
@@ -264,13 +251,11 @@ img {
   animation-delay: -3s;
 }
 
-.container .music1{
+.container .music1 {
   position: absolute;
   inset: 4px;
   background: #222;
-  /* padding: 50px 40px; */
+  padding: 20px;
   border-radius: 8px;
   z-index: 2;
-  /* display: flex;
-  flex-direction: column; */
 }
